--- a/tA.cabal
+++ b/tA.cabal
@@ -19,7 +19,7 @@ library
   exposed-modules: TA
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.10 && <4.11
+  build-depends:       base 
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -27,7 +27,7 @@ executable tA
   main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.10 && <4.11
+  build-depends:       base 
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -36,4 +36,4 @@ Test-Suite test
   Type:                 exitcode-stdio-1.0
   Main-is:              test.hs
   Build-depends: base, HUnit
-  hs-source-dirs:      test
+  hs-source-dirs:      src
