--- a/tA.cabal
+++ b/tA.cabal
@@ -16,8 +16,8 @@ extra-source-files:  ChangeLog.md
 cabal-version:       >=1.10
 
 library
-  exposed-modules: TA
-  -- other-modules:
+  exposed-modules:     TA
+  --other-modules:       TA
   -- other-extensions:
   build-depends:       base 
   hs-source-dirs:      src
@@ -35,5 +35,6 @@ executable tA
 Test-Suite test
   Type:                 exitcode-stdio-1.0
   Main-is:              test.hs
+  other-modules:       TA
   Build-depends: base, HUnit
   hs-source-dirs:      src
