--- a/tA.cabal
+++ b/tA.cabal
@@ -16,8 +16,8 @@ extra-source-files:  ChangeLog.md
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     TA
-  --other-modules:       TA
+  --exposed-modules:     TA
+  other-modules:       TA
   -- other-extensions:
   build-depends:       base 
   hs-source-dirs:      src
@@ -25,7 +25,7 @@ library
 
 executable tA
   main-is:             Main.hs
-  -- other-modules:
+  other-modules:       TA
   -- other-extensions:
   build-depends:       base 
   hs-source-dirs:      src
