modified:   dist/build/autogen/cabal_macros.h 	modified:   dist/build/tA/autogen/cabal_macros.h 	modified:   dist/setup-config 	modified:   tA.cabal

--- a/tA.cabal
+++ b/tA.cabal
@@ -13,7 +13,7 @@ author:              phoenixterran
 -- category:
 build-type:          Simple
 extra-source-files:  ChangeLog.md
-cabal-version:       >=1.10
+--cabal-version:       >=1.10
 
 library
   exposed-modules:     TA
