--- a/tA.cabal
+++ b/tA.cabal
@@ -6,14 +6,14 @@ version:             0.1.0.0
 -- synopsis:
 -- description:
 license:             BSD3
-license-file:        LICENSE
+--license-file:        LICENSE
 author:              phoenixterran
 -- maintainer:
 -- copyright:
 -- category:
 build-type:          Simple
 extra-source-files:  ChangeLog.md
---cabal-version:       >=1.10
+cabal-version:       >=2.0
 
 library
   exposed-modules:     TA
@@ -33,8 +33,8 @@ executable tA
 
 
 Test-Suite test
-  Type:                 exitcode-stdio-1.0
-  Main-is:              test.hs
+  Type:                exitcode-stdio-1.0
+  Main-is:             test.hs
   other-modules:       TA
   Build-depends: base, HUnit
   hs-source-dirs:      src
