--- a/tA.cabal
+++ b/tA.cabal
@@ -35,6 +35,6 @@ executable tA
 Test-Suite test
   Type:                exitcode-stdio-1.0
   Main-is:             test.hs
-  other-modules:       TA
+  --other-modules:       TA
   Build-depends: base, HUnit
   hs-source-dirs:      src
